Add max age for cookies